# proxy-wasm-rust

./: Cargo.toml  docker-compose.yaml
envoy/: envoy.yaml
src/: lib.rs
