[package]
name = "proxy-wasm-rust"
version = "0.1.0"
authors = ["ryok-0319 <ryo.k.0319.tan2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy-wasm = "0.1.2"
log = "0.4"

[lib]
crate-type = ["cdylib"]
